--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ androidx-core = "1.12.0"
 androidx-lifecycle = "2.7.0"
 androidx-activity = "1.8.2"
 androidx-compose-bom = "2024.04.00"
+androidx-compose-compiler = "1.5.11"
 
 junit = "4.13.2"
 junitVersion = "1.1.5"
